# strategy_msxvi

./: .env.example  .gitignore  README  README.md  autograd.ipynb  db_cloud_sync.py  db_fetch.py  db_funcs.py  gpx_output.txt  irradiance.py  main.ipynb  main.py  optimizer.py  overview.py  pyproject.toml  requirements.txt  sim.py  simulation.py  solver.py  sync.py  test2 copy.ipynb
archive/: elevation_angle.py  elevation_calcs.py  elevation_workaround.py  etl_weather.py  irradiance_backup.py  main_kostubh.ipynb  main_rodrigo.ipynb  og.ipynb  test_irradiance.py  weather.py
data/asc_24/: 1B_PaducahToEdwardsville.gpx  2CL_JeffersonCityLoop.gpx  2D_JeffersonCityToIndependence.gpx  2E_IndependenceToSaintJoseph.gpx  3FL_BeatriceLoop.gpx  3HL_GeringLoop.gpx  4J_GeringToCasper.gpx  historical_irradiance_loc_discretized.csv
db/: __init__.py  connect.py  export.py  import.py  load.py  loader.py  sync.py
db/setup/: __init__.py  historicalirradiance.py  irradiance.py  routemodel.py
db_setup/: gpx_output.txt  init.py  irradiance.py  loopy.py  routemodel.py
db_setup/gpx_asc24/: 0_FullBaseRoute.gpx  1AL_PaducahLoop.gpx  1A_NashvilleToPaducah.gpx  1BL_EdwardsvilleLoop.gpx  2C_EdwardsvilleToJeffersonCity.gpx  (+5 more)
etl/: basic_route_model.py  etl.py  etl_elevation.py
scripts/: bearing.py  export_csv.py  verify.py
src/: main.py  optimize.py  overview.py  plot.py  simulation.py  solver.py  utils.py
telemetry/: README  db_test.py  db_upload.py  decoder.py  how_to_connect_windows.txt  hw_test.py  main.py  read_test.py  sw_test.py  system_can.dbc  telemetry.py  test.py
(+19 files in other folders)
